# experiments

./: CMakeLists.txt  LICENSE  README.md  run.sh
include/: CMakeLists.txt
include/power/: container.h  debug.h
main/: CMakeLists.txt  main.cpp
power/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  logger.cpp
